--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "antd": "^5.3.1",
+    "css-loader": "^6.7.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "style-loader": "^3.3.2"
   }
 }
