--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./src/index.tsx",
   "scripts": {
+    "server": "cd mock && http-server -p 4000 -a localhost",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --mode=development --config ./build/webpack.config.js",
     "build": "webpack serve --mode=production --config ./build/webpack.config.js"
@@ -15,6 +16,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.1.1",
     "ts-loader": "^9.4.2",
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1",
@@ -23,7 +25,9 @@
   },
   "dependencies": {
     "antd": "^5.3.1",
+    "axios": "^1.3.4",
     "css-loader": "^6.7.3",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "style-loader": "^3.3.2"
